--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html lang="en-us">
 	<head>
-		<title>Weather</title>
+		<title>Weather - Development</title>
+		<meta name="description" content="Simple and straightforward weather information">
+		<link rel="shortcut icon"href="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f324.svg">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
