--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	<body>
 		<div class="page-wrapper">
 			
-			<div id="placeholder">Loading the weather...</div>
+			<div id="placeholder">The Website isn't working at the moment...</div>
 			
 			<div id="weather" hidden>
 				<div id="place">Chisinau, Moldova</div>
